--- a/admin-user/src/videoUpload-v1/videoUpload-v1.less
+++ b/admin-user/src/videoUpload-v1/videoUpload-v1.less
@@ -137,7 +137,37 @@ ul, dl, li, ol {
     opacity: 0;
     position: absolute;
     z-index: 1;
+    cursor: pointer;
     //display: none!important;
     //vertical-align: middle;
     //margin-right: 10px;
+}
+
+.modalbtn-blue {
+    color: #208ac3;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+.btn-ipt-hui {
+    color: #aaacb8;
+    border: 1px solid #aaacb8;
+    width: 140px;
+    height: 36px;
+    box-sizing: border-box;
+    background-color: #fff;
+    text-align: center;
+    outline: none;
+    -o-border-radius: 18px;
+    border-radius: 18px;
+    &.btn-ipt-blue{
+        color: #208ac3;
+        border: 1px solid #208ac3;
+    }
+}
+.table-box{
+    padding-right: 0;
+    height: 350px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
