--- a/admin-user/src/_common/common.less
+++ b/admin-user/src/_common/common.less
@@ -92,6 +92,7 @@ body{
   margin-right:-220px;
   min-height: 100vh;
   background-color: #383838;
+  z-index: 1000;
 }
 .g-mn1{float:right;width:100%;}
 .g-mn1c{margin-left:220px;}
@@ -159,3 +160,47 @@ ul, dl, li, ol {
     margin: 0;
     padding: 0;
 }
+
+
+/*page top s*/
+.gh-create-item {
+    width: 100%;
+    height: 44px;
+    line-height: 44px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    background: #f9fafc;
+    border-bottom: 1px solid #ededf1;
+    .gh-item-title {
+        color: #33333c;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 44px;
+        margin: 0;
+    }
+    .gh-btn-title {
+        font-weight: 400;
+        font-size: 12px;
+        color: #208ac3;
+        padding: 0 20px;
+        border: 1px solid #208ac3;
+        height: 28px;
+        line-height: 28px;
+        margin-top: 6px;
+        border-radius: 16px;
+        cursor: pointer;
+        position: relative;
+        .add {
+            font-size: 26px;
+            position: relative;
+            top: -2px;
+            font-weight: 700;
+        }
+        .text {
+            position: relative;
+            top: -5px;
+        }
+    }
+}
+/*page top e*/
